--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       src="https://kit.fontawesome.com/f7f6a880c5.js"
       crossorigin="anonymous"
     ></script>
+    <!--Custom jQuery-->
+    <script defer src="./jquery.js"></script>
     <!--Custom JS-->
     <script defer src="./script.js"></script>
   </head>
@@ -123,7 +125,7 @@
                     <div class="icon">
                       <img
                         src="https://www.emart24.co.kr/assets/assets/imgs/mobGnbIcon/product.png"
-                        alt=""
+                        alt="product"
                       />
                     </div>
                     <h1>상품</h1>
@@ -240,12 +242,36 @@
               </li>
             </ul>
           </div>
-          <div class="mobheader-snb"></div>
-        </div>
-        <div class="mobheader-snbwrap">
           <div class="mobheader-snb">
-            <h2>고객센터</h2>
-            <i class="fas fa-angle-right"></i>
+            <ul class="mobheader-lnb-list">
+              <li>
+                <h2><a href="#">고객센터</a></h2>
+                <div class="mobheader-lnb-icon">
+                  <img
+                    src="https://www.emart24.co.kr/assets/assets/imgs/arrowYellow.png"
+                    alt="arrow"
+                  />
+                </div>
+              </li>
+              <li>
+                <h2><a href="#">이마트24소개</a></h2>
+                <div class="mobheader-lnb-icon">
+                  <img
+                    src="https://www.emart24.co.kr/assets/assets/imgs/arrowYellow.png"
+                    alt="arrow"
+                  />
+                </div>
+              </li>
+              <li>
+                <h2><a href="#">채용안내</a></h2>
+                <div class="mobheader-lnb-icon">
+                  <img
+                    src="https://www.emart24.co.kr/assets/assets/imgs/arrowYellow.png"
+                    alt="arrow"
+                  />
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -257,10 +283,10 @@
       <div class="footer-wrap">
         <div class="footer-fnbwrap">
           <ul class="footer-fnb">
-            <li class="fnbmenu"><a href="#">개인정보 처리방침</a></li>
-            <li class="fnbmenu"><a href="#">이용약관</a></li>
-            <li class="fnbmenu"><a href="#">고객센터</a></li>
-            <li class="fnbmenu"><a href="#">CSR경영</a></li>
+            <li class="fnbmenu"><a href="#">개인정보 처리방침 |</a></li>
+            <li class="fnbmenu"><a href="#">이용약관 |</a></li>
+            <li class="fnbmenu"><a href="#">고객센터 |</a></li>
+            <li class="fnbmenu"><a href="#">CSR경영 |</a></li>
             <li class="fnbmenu"><a href="#">사이트맵</a></li>
           </ul>
           <div class="footer-familysite">
